@@ -340,7 +340,7 @@ class CurveFitter(object):
             - 'covar', use the estimated covariance of the system.
             - 'jitter', add a small amount of gaussian noise to each parameter
             - 'prior', sample random locations from the prior using Latin
-                Squares.
+                Hyper Cube.
             - pos, an array that specifies a snapshot of the walkers. Has shape
                 `(nwalkers, ndim)`, or `(ntemps, nwalkers, ndim)` if parallel
                  tempering is employed. You can also provide a previously
@@ -409,6 +409,10 @@ class CurveFitter(object):
         # use the prior to initialise position
         elif pos == "prior":
             arr = np.zeros((_ntemps, nwalkers, nvary))
+            LHC = LatinHypercube(nvary, seed=random_state)
+            samples = LHC.random(
+                n=_ntemps * nwalkers
+            ).reshape(_ntemps, nwalkers, nvary)
 
             for i, param in enumerate(self._varying_parameters):
                 # bounds are not a closed interval, just jitter it.
@@ -422,10 +426,9 @@ class CurveFitter(object):
                     vals *= param.value
                     arr[..., i] = vals
                 else:
-                    LHC = LatinHypercube(nvary, seed=random_state)
-                    arr[..., i] = param.bounds.rvs(
-                        size=(_ntemps, nwalkers), random_state=rng
-                    )
+                    sample_arr = samples[..., i]
+                    transformed = param.bounds.invcdf(sample_arr)
+                    arr[..., i] = transformed
 
             init_walkers = arr
 
